updated filters for creatives and ads
